--- a/war/GroupBuy_Web_UI.css
+++ b/war/GroupBuy_Web_UI.css
@@ -1,40 +1,55 @@
 /** Add css rules here for your application. */
-
-
 /** Example rules used by the template application (remove for your app) */
 h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #111111;
-  margin: 40px 0px 70px;
-  text-align: center;
+	font-size: 2em;
+	font-weight: bold;
+	color: #111111;
+	margin: 40px 0px 70px;
+	text-align: center;
 }
 
 .sendButton {
-  display: block;
-  font-size: 20pt;
-  color: blue;
+	display: block;
+	font-size: 20pt;
+	color: blue;
 }
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
-  width: 400px;
+	width: 400px;
 }
 
 .dialogVPanel {
-  margin: 2px;
+	margin: 2px;
 }
 
 .serverResponseLabelError {
-  color: red;
+	color: red;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
-  margin: 15px 6px 6px;
+	margin: 15px 6px 6px;
 }
-
 
 .gwt-TabLayoutPanel .gwt-TabLayoutPanelContent {
 	border-style: none !important;
 }
+
+.orderTypeTabPanel-layout .gwt-TabLayoutPanelContentContainer {
+	border-style: none !important;
+	/* 	height : 3720px; */
+	width: 100%;
+}
+
+.categoryTabPanel-layout {
+	height: 3850px;
+	width: 100%;
+}
+
+.pageList-layout {
+	align: center;
+}
+/* .GroupBuyResultView-layout{
+	height: 3000px;
+} */
