keyword search ui implementation

--- a/src/main/webapp/GroupBuy_Web_UI.css
+++ b/src/main/webapp/GroupBuy_Web_UI.css
@@ -61,3 +61,7 @@ h1 {
 .orderTypeTabPanel-layout .gwt-TabLayoutPanel .gwt-TabLayoutPanelTab {
 	width: 42px;
 }
+
+.searchInputBox {
+	width: 300px;
+}
