--- a/src/main/java/com/orange/groupbuy/web/client/view/MyGroupLayout.ui.xml
+++ b/src/main/java/com/orange/groupbuy/web/client/view/MyGroupLayout.ui.xml
@@ -5,8 +5,8 @@
 	<ui:style>
 		
 	</ui:style>
-	<g:DockLayoutPanel>
-		<g:west size='128'>
+	<g:DockLayoutPanel unit='EM'>
+		<g:west size='13'>
 			<gc:GroupBuyNavigationPanel ui:field='myGroupNavigationPanel' />
 		</g:west>
 		<g:center>
@@ -15,4 +15,4 @@
 			</g:ScrollPanel>
 		</g:center>
 	</g:DockLayoutPanel>
-</ui:UiBinder> 
+</ui:UiBinder>
