--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 body,p,b,dl,dd,table,td,th,img,form,div,ul,li,h1,h2,h3,h4,h5,h6 {
 	/*input*/
 	margin: 0;
@@ -6,12 +8,11 @@ body,p,b,dl,dd,table,td,th,img,form,div,ul,li,h1,h2,h3,h4,h5,h6 {
 	outline: 0;
 	font-size: 100%;
 	vertical-align: baseline;
-	font-family: Arial, Helvetica, sans-serif;
 	border: 0px  !important;
 }
 
 body{
-	font-family : arial;
+	font : 12px "微软雅黑" Verdana, Arial, Tahoma;
 }
 
 ul, ol {
