--- a/src/main/java/com/orange/groupbuy/web/client/view/AbstractGroupLayout.ui.xml
+++ b/src/main/java/com/orange/groupbuy/web/client/view/AbstractGroupLayout.ui.xml
@@ -6,13 +6,14 @@
 		
 	</ui:style>
 	<g:DockLayoutPanel unit='EM'>
-		<g:west size='15'>
+		<g:west size='12'>
 			<gc:GroupBuyNavigationPanel ui:field='myGroupNavigationPanel' />
 		</g:west>
 		<g:center>
 			<g:FlowPanel>
-				  <gc:PageListWidget ui:field='pageNavigation'></gc:PageListWidget>
-				  <g:FlowPanel ui:field='searchResultPanel'>
+				  <gc:PageListWidget ui:field='pageNavigation' styleName='float-right'>
+				  </gc:PageListWidget>
+				  <g:FlowPanel ui:field='searchResultPanel' styleName='float-left'>
 				  </g:FlowPanel>
 			</g:FlowPanel>
 		</g:center>
