--- a/src/main/java/com/orange/groupbuy/web/client/view/MainLayout.ui.xml
+++ b/src/main/java/com/orange/groupbuy/web/client/view/MainLayout.ui.xml
@@ -1,9 +1,9 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
 	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:gc="urn:import:com.orange.groupbuy.web.client.component">
-	<g:HTMLPanel>
+	<g:HTMLPanel styleName='center'>
 		<g:DockLayoutPanel unit='EM'>
-			<g:north size="5">
+			<g:north size="4">
 				<gc:GroupBuyHeaderPanel ui:field='headerPanel' />
 			</g:north>
 			<g:north size="60">
