--- a/src/main/webapp/css/tuan_template.css
+++ b/src/main/webapp/css/tuan_template.css
@@ -1,3 +1,15 @@
+body,p,b,dl,dd,table,td,th,img,form,div,ul,li,h1,h2,h3,h4,h5,h6 {
+	/*input*/
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
+	vertical-align: baseline;
+}
 
 .tuan-con {
 	width: 290px;
