--- a/src/main/webapp/css/tuan.css
+++ b/src/main/webapp/css/tuan.css
@@ -2,26 +2,12 @@
 	zoom: 1;
 }
 
-.center {
-	width: 960px;
-	margin: 0 auto;
+<!--
+.groupbuy-TabLayoutPanel .gwt-TabLayoutPanel .gwt-TabLayoutPanelTab {
+    background: none repeat scroll 0 0 #FFFFFF;
 }
 
-.Dragon_Boat {
-	position: relative;
-	z-index: 20;
+.groupbuy-TabLayoutPanel .gwt-TabLayoutPanel .gwt-TabLayoutPanelTab-selected{
+	background: none repeat scroll 0 0 #DFF3FD ;
 }
-
-.sort-right {
-	/*
-	position: absolute;
-	right: 700px;
-	top: 108px;
-	*/
-	float:right;
-	z-index: 100;
-}
-
-.GroupBuyWidget-layout {
-	padding: 20px 0 0 16px;
-}
+-->
