group buy widget style  improvement

--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -15,6 +15,11 @@ body{
 	font-family : arial;
 	font : 12px/1.5 'Tahoma','simsun';
 }
+
+ul, ol {
+    list-style-type: none;
+}
+
 .float-left {
 	float: left;
 }
