--- a/src/main/java/com/orange/groupbuy/web/client/view/AbstractGroupLayout.ui.xml
+++ b/src/main/java/com/orange/groupbuy/web/client/view/AbstractGroupLayout.ui.xml
@@ -5,17 +5,17 @@
 		
 	</ui:style>
 	<g:LayoutPanel>
-			<g:layer width='150px'>
+			<g:layer width='160px'>
 				<gc:GroupBuyNavigationPanel ui:field='myGroupNavigationPanel' />
 			</g:layer>
-   			<g:layer left='160px' width='100%' height='100%'>
+   			<g:layer left='200px' width='100%' height='100%'>
 				<g:LayoutPanel>
 					<g:layer height='20px' width='100%'>
 						<gc:PageListWidget ui:field='pageNavigation' styleName='float-right'>
 						</gc:PageListWidget>
 					</g:layer>
 					<g:layer top='35px' height='100%'>
-						<g:FlowPanel ui:field='searchResultPanel' styleName='float-left'>
+						<g:FlowPanel ui:field='searchResultPanel' styleName='searchResultPanel'>
 						</g:FlowPanel>
 					</g:layer>
 					<g:layer bottom ='20px' height='20px' width='100%'>
