--- a/src/main/java/com/orange/groupbuy/web/client/view/MainLayout.ui.xml
+++ b/src/main/java/com/orange/groupbuy/web/client/view/MainLayout.ui.xml
@@ -8,7 +8,7 @@
 				<gc:GroupBuyHeaderPanel ui:field='headerPanel' />
 			</g:layer>
    			<g:layer top='55px' height='4000px'>
-				<gc:GroupBuyTabHeader ui:field='tabHeader' addStyleNames='groupbuy-TabLayoutPanel'/>
+				<gc:GroupBuyTabHeader ui:field='tabHeader'/>
    			</g:layer>
    			<g:layer bottom='20px' height='40px'>
    				<gc:GroupBuyFootPanel ui:field='footPanel' />
