--- a/src/main/java/com/orange/groupbuy/web/client/view/AbstractGroupLayout.ui.xml
+++ b/src/main/java/com/orange/groupbuy/web/client/view/AbstractGroupLayout.ui.xml
@@ -8,17 +8,17 @@
 			<g:layer width='160px'>
 				<gc:GroupBuyNavigationPanel ui:field='myGroupNavigationPanel' />
 			</g:layer>
-   			<g:layer left='200px' width='100%' height='100%'>
+   			<g:layer left='200px' width='100%' >
 				<g:LayoutPanel>
-					<g:layer left='560px' top='10px' height='20px' width='100%'>
+					<g:layer left='570px' top='10px' height='20px'  width='130px'>
 						<gc:PageListWidget ui:field='pageNavigation'>
 						</gc:PageListWidget>
 					</g:layer>
-					<g:layer top='35px' height='100%'>
+					<g:layer top='35px' height='4600px'>
 						<g:FlowPanel ui:field='searchResultPanel' styleName='searchResultPanel'>
 						</g:FlowPanel>
 					</g:layer>
-					<g:layer left='560px' bottom ='10px' height='20px' width='100%'>
+					<g:layer left='570px' bottom ='10px' height='20px' width='130px'>
 						<gc:PageListWidget ui:field='bottomPageNavigation'>
 						</gc:PageListWidget>
 					</g:layer>
