--- a/src/main/java/com/orange/groupbuy/web/client/view/MainLayout.ui.xml
+++ b/src/main/java/com/orange/groupbuy/web/client/view/MainLayout.ui.xml
@@ -1,20 +1,17 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
 	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:gc="urn:import:com.orange.groupbuy.web.client.component">
-	<!-- styleName='center' -->
-	<g:HTMLPanel  styleName='center'>
-	<g:LayoutPanel height='4150px'>
-			<g:layer top='5px' height='100px'>
+	<g:HTMLPanel styleName='center'>
+		<g:LayoutPanel height='4750px'>
+			<g:layer top='5px' height='100px' width='100%'>
 				<gc:GroupBuyHeaderPanel ui:field='headerPanel' />
 			</g:layer>
-   			<g:layer top='55px' height='4000px'>
-				<gc:GroupBuyTabHeader ui:field='tabHeader'/>
-   			</g:layer>
-   			<g:layer bottom='20px' height='40px'>
-   				<gc:GroupBuyFootPanel ui:field='footPanel' />
-   			</g:layer>
-   </g:LayoutPanel>
-
+			<g:layer top='55px' height='4600px'>
+				<gc:GroupBuyTabHeader ui:field='tabHeader' />
+			</g:layer>
+			<g:layer bottom='20px' height='40px'>
+				<gc:GroupBuyFootPanel ui:field='footPanel' />
+			</g:layer>
+		</g:LayoutPanel>
 	</g:HTMLPanel>
-
 </ui:UiBinder>
