--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -4,16 +4,13 @@ body,p,b,dl,dd,table,td,th,img,form,div,ul,li,h1,h2,h3,h4,h5,h6 {
 	padding: 0;
 	border: 0;
 	outline: 0;
-	font-weight: inherit;
-	font-style: inherit;
 	font-size: 100%;
-	font-family: inherit;
 	vertical-align: baseline;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
 	font-family : arial;
-	font : 12px/1.5 'Tahoma','simsun';
 }
 
 ul, ol {
