--- a/src/main/webapp/css/tuan.css
+++ b/src/main/webapp/css/tuan.css
@@ -3,30 +3,30 @@
 }
 
 .groupbuy-TabLayoutPanel .gwt-TabLayoutPanelTab {
-    background: none repeat scroll 0 0 #FFFFFF !important;
+	background: none repeat scroll 0 0 #FFFFFF !important;
 }
 
-.groupbuy-TabLayoutPanel .gwt-TabLayoutPanelTab-selected{
+.groupbuy-TabLayoutPanel .gwt-TabLayoutPanelTab-selected {
 	background: none repeat scroll 0 0 #DFF3FD !important;
 }
 
-.searchResultPanel{
+.searchResultPanel {
 	overflow: auto;
-    padding: 20px;
+	padding: 20px;
 }
 
-.uptop{
+.uptop {
 	cursor: pointer;
-    height: 78px;
-    position: fixed;
-    width: 20px;
-    display: block;
-    bottom: 5px;
-    margin-left: 1309px;
+	height: 78px;
+	position: fixed;
+	width: 20px;
+	display: block;
+	bottom: 30px;
+	margin-left: 1130px;
 }
 
 .head {
-	position:relative;
+	position: relative;
 }
 
 a img {
@@ -43,40 +43,85 @@ a img {
 .weiboicon {
 	float: left;
 	display: inline;
-	margin-top:2px;
+	margin-top: 2px;
 	margin-left: 5px;
 }
 
+.weibotxt a, a:visited, a:hover {
+    color: #666666;
+}
+
 .city {
-	position:absolute; bottom:30px;left:300px;
-	float:left;
+	position: absolute;
+	bottom: 30px;
+	left: 300px;
+	float: left;
+}
+
+.cityfix {
+	position: absolute;
+	bottom: 30px;
+	left: 350px;
+	float: left;
+	font-size: 1.2em;
+	height: 30px;
+	line-height: 28px;
+	padding: 0 35px 0 5px;
 }
 
 .share {
-	float:right;
+	float: right;
 	display: inline;
-	margin-top:0px;
-	margin-right:50px;
+	margin-top: 0px;
+	margin-right: 50px;
+}
+
+.guides {
+	left: 400px;
+	top: 73px;
+	position: absolute;
+	overflow: visible;
 }
 
 .logo {
-	margin-left:10px;
+	margin-left: 10px;
 	width: 250px;
 	height: 60px;
 	background-image: url('../images/logo3.jpg');
 	background-repeat: no-repeat;
 	display: block;
 	text-indent: -99999px;
-	position:absolute; bottom:30px;
+	position: absolute;
+	bottom: 30px;
 }
 
 .search {
-	float:right;
-	position:absolute; bottom:30px;left:500px;
+	float: right;
+	position: absolute;
+	bottom: 30px;
+	left: 500px;
 }
 
-.input{
-	border: 1px solid #006; 
+.input {
+	border: 1px solid #006;
 	width: 300px;
-	height:20px;
+	height: 20px;
+}
+
+.footer {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #666666;
+	font-size: 12px;
+	padding-top: 5px;
+	text-align:left;
+	padding-left: 15px
+}
+
+.footer a {
+	color: #666666;
+	text-decoration: none;
+}
+
+.footera, a:visited, a:hover {
+    color: #666666;
 }
