--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -7,6 +7,7 @@ body,p,b,dl,dd,table,td,th,img,form,div,ul,li,h1,h2,h3,h4,h5,h6 {
 	font-size: 100%;
 	vertical-align: baseline;
 	font-family: Arial, Helvetica, sans-serif;
+	border: 0px  !important;
 }
 
 body{
