--- a/src/main/java/com/orange/groupbuy/web/client/view/MainLayout.ui.xml
+++ b/src/main/java/com/orange/groupbuy/web/client/view/MainLayout.ui.xml
@@ -3,17 +3,23 @@
 	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:gc="urn:import:com.orange.groupbuy.web.client.component">
 
 	<g:HTMLPanel styleName='center'>
-		<g:LayoutPanel height='4350px'>
+		<g:LayoutPanel height='4350px' ui:field="mainPanel" >
 			<g:layer top='5px' height='130px' width='100%'>
 				<gc:GroupBuyHeaderPanel ui:field='headerPanel' />
 			</g:layer>
-			<g:layer top='130px' height='4200px'>
-
+			<g:layer top='130px' bottom="-45px">
 				<gc:GroupBuyTabHeader ui:field='tabHeader' />
 			</g:layer>
 			<g:layer bottom='-45px' height='45px'>
 				<gc:GroupBuyFootPanel ui:field='footPanel' />
 			</g:layer>
 		</g:LayoutPanel>
+		
+<!-- 		<g:FlowPanel ui:field="mainPanel" width="100%" > -->
+<!-- 				<gc:GroupBuyHeaderPanel ui:field='headerPanel'/> -->
+
+<!-- 				<gc:GroupBuyTabHeader ui:field='tabHeader' /> -->
+<!-- 				<gc:GroupBuyFootPanel ui:field='footPanel' /> -->
+<!-- 		</g:FlowPanel> -->
 	</g:HTMLPanel>
 </ui:UiBinder>
