--- a/src/main/webapp/css/tuan.css
+++ b/src/main/webapp/css/tuan.css
@@ -22,7 +22,7 @@
  	width:68px;
  	margin-left: 0px !important;
     padding: 3px 5px !important;
- 	color:#4f4f4f;
+ 	color:#4F4F4F !important;
  	font-weight:bold; 
  	height:32px;
  	line-height:30px; 
@@ -35,6 +35,7 @@
  	padding:0px;
  	background:url(../images2/hover.jpg) no-repeat !important;
  	width:68px;
+ 	color:#FFFFFF !important;
 }
 
 /* .groupbuy-TabLayoutPanel .gwt-TabLayoutPanelContent{
@@ -186,9 +187,13 @@
 
 /* workround for CellTable*/
 .navigationPanel table tr:hover { 
-	background: url("../images2/org_bg.jpg") no-repeat scroll 0 3px transparent
+	background: url("../images2/org_bg.jpg") no-repeat scroll 0 3px transparent;
+	color:#FFFFFF
 }
-
+.navigationPanel table tr:visited { 
+	background: url("../images2/org_bg.jpg") no-repeat scroll 0 3px transparent;
+	color:#FFFFFF
+}
  /* .navigationPanel .GNERLPIDKD {
 	background: url("../images2/org_bg.jpg") no-repeat scroll 0 3px
 		transparent
